# slgrok

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
plans/: initial_spec.md
src/slgrok/: __init__.py  __main__.py  main.py  settings.py
src/slgrok/cli/: __init__.py  commands.py  help.py  options.py
src/slgrok/models/: __init__.py  filters.py  output.py  requests.py
src/slgrok/repositories/: __init__.py  ngrok.py
src/slgrok/services/: __init__.py  formatter.py  inspector.py
tests/: __init__.py  conftest.py
tests/fixtures/: requests.json
tests/test_cli/: test_commands.py
tests/test_repositories/: test_ngrok.py
tests/test_services/: test_formatter.py  test_inspector.py
