[project]
name = "slgrok"
version = "0.1.0"
description = "CLI tool for extracting and formatting HTTP request/response data from ngrok's inspector API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "pyrefly",
    "pre-commit",
]

[project.scripts]
slgrok = "slgrok.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slgrok"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["slgrok"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
python-version = "3.13"
project-includes = ["src"]
